[new]トップページのレスポンシブ対応

--- a/assets/scss/component/global/_mainTitle.scss
+++ b/assets/scss/component/global/_mainTitle.scss
@@ -8,3 +8,10 @@
     font-weight: bold;
     color: cl.$c-mainTitle;
 }
+
+@include mq(lg, max) {
+    .c-mainTitle {
+        font-size: 30px;
+        line-height: 36px;
+    }
+}
