[new]ハンバーガーメニューの実装と各ページ共通レイアウトのレスポンシブ対応

--- a/assets/scss/component/global/_mainTitle.scss
+++ b/assets/scss/component/global/_mainTitle.scss
@@ -3,6 +3,7 @@
 @use "../../foundation/font" as fs;
 
 .c-mainTitle {
+    font-family: fs.$montserrat;
     font-size: 36px;
     line-height: 43.2px;
     font-weight: bold;
