--- a/assets/scss/foundation/_mixin.scss
+++ b/assets/scss/foundation/_mixin.scss
@@ -1,7 +1,7 @@
 // ブレイクポイント
 $mq-breakpoints: (
-    'xs': 340px,
-    'ls': 420px,
+    'xxs': 340px,
+    'xs': 420px,
     'sm': 640px,
     'md': 768px,
     'lg': 1024px,
