--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -23,6 +23,11 @@
 
 @include mq(lg, max) {
     .l-header {
+
+        .l-header__logo {
+            width: 120px;
+            height: 13px;
+        }
         
         .l-header__nav {
             display: none;
