--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -15,6 +15,7 @@
 // ==========================================================================
 
 @import "layout/header";
+@import "layout/hamburger";
 @import "layout/subHeader";
 @import "layout/footer";
 @import "layout/contact";
