--- a/assets/scss/project/_index.scss
+++ b/assets/scss/project/_index.scss
@@ -210,6 +210,7 @@
         width: 100%;
         background-image: url("/assets/img/bg/bg_circle_sp.png");
         background-size: auto;
+        padding: 15% 0;
 
         .p-index-company__context {
             .p-index-company__context-header {
