--- a/assets/scss/project/_works.scss
+++ b/assets/scss/project/_works.scss
@@ -10,3 +10,11 @@
     margin: auto;
     padding: 120px 0;
 }
+
+@include mq(lg, max) {
+    .p-works {
+        width: 92%;
+        display: flex;
+        flex-direction: column;
+    }
+}
