--- a/assets/scss/project/news/_index.scss
+++ b/assets/scss/project/news/_index.scss
@@ -9,15 +9,19 @@
         flex-direction: column;
         gap: 14px;
         padding-top: 80px;
-
-        .p-news-index__newsItems-item {
-            justify-content: center;
-        }
     }
 
     .p-news-index__pagers {
         justify-content: center;
         margin-top: 40px;
         margin-bottom: 80px;
+    }
+}
+
+@include mq(lg, max) {
+    .p-news-index {
+        .p-news-index__newsItems {
+            @include content-center(92%);
+        }
     }
 }
